** New Features & Bug Fixes ** A. Realtime P&L Impacts    - Fixed Column Tradegroup (for horizontal scrolling)    - YTD PnL handled for market close hours    - Daily PnL shows yesterday's close if market closed
B. Merger ARB IDEA Database
   - 'EQUITY' handled in target ticker
   - AUM auto populated for scenario analysis

C. Merger ARB NAV Impacts
   - Color coded excel report will be exported

D. ESS IDEA Database
   - Changed format of detailed calculations

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -152,3 +152,7 @@ select > option
   word-wrap:inherit;
 }
 
+.dataTables_scroll
+{
+    overflow:auto;
+}
